# testbed

./: .gitignore  READ.md  README.md  docker-compose.yml  pcap_parser  scada.Dockerfile  slm_ot_dashboard.ndjson
backup/: plc1_flows.json  plc2_flows.json  plc3_flows.json  plc4_flows.json  plc_flows.json  scada_flows.json
backup/scada/: flows.json
settings/: traffic_light_plc.json  traffic_light_scada.json
settings/plc/: flows.json  flows1.json  flows2.json  flows4.json  package.json  plc.Dockerfile
settings/plc/plc1/: flows.json  settings.js
settings/plc/plc2/: flows.json
settings/plc/plc3/: flows.json
settings/plc/plc4/: flows.json
settings/scada/: flows.json  flows_cred.json  package.json  scada.Dockerfile  settings.js
settings/solution/: entrypoint.sh  json2csv_parser.py  jsonl_bulk_indexer.py  kafka_producer.py  requirements.txt  solution.Dockerfile
tcp_datagram_parser/: CMakeLists.txt  README.md
tcp_datagram_parser/src/: PacketParser.cpp  PacketParser.h  main.cpp
tcp_datagram_parser/src/network/: network_headers.h
tcp_datagram_parser/src/protocols/: ArpParser.cpp  ArpParser.h  BaseProtocolParser.cpp  BaseProtocolParser.h  Dnp3Parser.cpp  Dnp3Parser.h  DnsParser.cpp  DnsParser.h  GenericParser.cpp  GenericParser.h  IProtocolParser.cpp  IProtocolParser.h  ModbusParser.cpp  ModbusParser.h  S7CommParser.cpp  S7CommParser.h  TcpSessionParser.cpp  TcpSessionParser.h  UnknownParser.cpp  UnknownParser.h  XgtFenParser.cpp  XgtFenParser.h
